[project]
name = "pollin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sebastian Schiller-Stoff", email = "sebastian.stoff@uni-graz.at" }
]
dependencies = [
    "jinja2==3.1.6",
    "click>=8.3.1",
    "watchdog>=6.0.0",
    "aiohttp>=3.13.3",
    "requests>=2.32.4"
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pollin"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.14.0"
]

[project.scripts]
pollin = "pollin.cli:cli"
