[project]
name = "gams-frog"
version = "v0.5.0"
description = "CLI tool for frontend generation for GAMS5 projects"
authors = [
    { name = "Sebastian David Schiller-Stoff", email = "sebastian.stoff@uni-graz.at" }
]
license = { text = "MIT" }
dependencies = [
    "jinja2==3.1.6",
    "click>=8.3.1",
    "watchdog>=6.0.0",
    "aiohttp>=3.13.3",
    "requests>=2.32.4"
]
readme = "README.md"
requires-python = ">= 3.12"
keywords = ["gams", "static-site-generator", "digital-humanities", "jinja2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://zimlab.uni-graz.at/gams5/production/postprocessing/gams-frog"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gams_frog"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.14.0"
]

[project.scripts]
frog = "gams_frog.cli:cli"
